--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -62,39 +56,39 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="MouseWheelUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MouseWheelDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="RotateCamera",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="MouseWheelUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="MouseWheelDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="RotateCamera",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--AxisMappings=(AxisName="Mouse X",Key=MouseX,Scale=1.000000)
--AxisMappings=(AxisName="Mouse Y",Key=MouseY,Scale=1.000000)
--AxisMappings=(AxisName="MoveVert",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="MoveVert",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="MoveHorez",Key=A,Scale=-4.541011)
--AxisMappings=(AxisName="MoveHorez",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="Mouse X",Key=MouseX,Scale=1.000000)
-+AxisMappings=(AxisName="Mouse Y",Key=MouseY,Scale=1.000000)
-+AxisMappings=(AxisName="MoveVert",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveVert",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveHorez",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveHorez",Key=D,Scale=1.000000)
--ActionMappings=(ActionName="MoveCamera",Key=RightMouseButton,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="MoveCamera",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MoveCamera",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MoveCamera",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ResetVR",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="MouseInteract",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MouseWheelUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MouseWheelDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RotateCamera",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MoveCamera",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MoveCamera",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MoveCamera",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ResetVR",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="MouseInteract",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-AxisMappings=(AxisName="Mouse X",Key=MouseX,Scale=1.000000)
+-AxisMappings=(AxisName="Mouse Y",Key=MouseY,Scale=1.000000)
+-AxisMappings=(AxisName="MoveVert",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="MoveVert",Key=S,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveHorez",Key=A,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveHorez",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="Mouse X",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="Mouse Y",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="MoveVert",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveVert",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveHorez",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveHorez",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
