--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,11 +56,10 @@ MinimumiOSVersion=IOS_8
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/TowerDefense")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/TowerDefense")
+MaximumLoopIterationCount=1000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
