Added a basic objectives list. The only way to get the max waves to display right is to add some variables to your level object.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=TowerDefense
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/TopDownBP/Maps/DanielTestMap.DanielTestMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -62,5 +62,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
