trying to fix tutorial map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=TowerDefense
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/DanielTestMap.DanielTestMap
+EditorStartupMap=/Game/TopDownBP/Maps/Iansmap.Iansmap
+GameDefaultMap=/Game/TowerDefense/Maps/Menu.Menu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
