--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/TopDownBP/Blueprints/TowerDefenseInstance.TowerDefenseInstance_C
 
 [/Script/Engine.RecastNavMesh]
 bDrawPolyEdges=False
